hdbs/src/main/java/com/juraj/hdbs/querying/language/GlobalSQLParser.java
// Generated from D:/Diplomski/hdbs/src/main/java/com/juraj/hdbs/querying/language\GlobalSQL.g4 by ANTLR 4.7
package com.juraj.hdbs.querying.language;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GlobalSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, JOIN=3, WHERE=4, DELETE=5, UPDATE=6, VALUES=7, SUM=8, 
		COUNT=9, AVG=10, MIN=11, MAX=12, SEMI=13, COLO=14, WS=15, GT=16, GE=17, 
		LT=18, LE=19, EQ=20, NE=21, AND=22, OR=23, LPAREN=24, RPAREN=25, COLID=26, 
		TBLID=27, DBID=28, ALLCOLS=29, INTEGER=30, DECIMAL=31, STRING=32, DBL_SLASH=33, 
		BLOCK_COMMENT=34;
	public static final int
		RULE_number_value = 0, RULE_string_value = 1, RULE_value = 2, RULE_number_comparison_operator = 3, 
		RULE_string_comparison_operator = 4, RULE_comparison = 5, RULE_logical_operator = 6, 
		RULE_select_clause = 7, RULE_delete_clause = 8, RULE_update_clause = 9, 
		RULE_aggregate_clause = 10, RULE_from_clause = 11, RULE_join_clause = 12, 
		RULE_where_clause = 13, RULE_select_query = 14, RULE_delete_query = 15, 
		RULE_update_query = 16, RULE_aggregate_query = 17;
	public static final String[] ruleNames = {
		"number_value", "string_value", "value", "number_comparison_operator", 
		"string_comparison_operator", "comparison", "logical_operator", "select_clause", 
		"delete_clause", "update_clause", "aggregate_clause", "from_clause", "join_clause", 
		"where_clause", "select_query", "delete_query", "update_query", "aggregate_query"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'SELECT'", "'FROM'", "'JOIN'", "'WHERE'", "'DELETE'", "'UPDATE'", 
		"'VALUES'", "'SUM'", "'COUNT'", "'AVG'", "'MIN'", "'MAX'", "';'", "','", 
		null, "'>'", "'>='", "'<'", "'<='", "'='", "'!='", "'AND'", "'OR'", "'('", 
		"')'", null, null, null, "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SELECT", "FROM", "JOIN", "WHERE", "DELETE", "UPDATE", "VALUES", 
		"SUM", "COUNT", "AVG", "MIN", "MAX", "SEMI", "COLO", "WS", "GT", "GE", 
		"LT", "LE", "EQ", "NE", "AND", "OR", "LPAREN", "RPAREN", "COLID", "TBLID", 
		"DBID", "ALLCOLS", "INTEGER", "DECIMAL", "STRING", "DBL_SLASH", "BLOCK_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GlobalSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GlobalSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Number_valueContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(GlobalSQLParser.INTEGER, 0); }
		public TerminalNode DECIMAL() { return getToken(GlobalSQLParser.DECIMAL, 0); }
		public Number_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterNumber_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitNumber_value(this);
		}
	}

	public final Number_valueContext number_value() throws RecognitionException {
		Number_valueContext _localctx = new Number_valueContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_number_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==DECIMAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_valueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GlobalSQLParser.STRING, 0); }
		public String_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterString_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitString_value(this);
		}
	}

	public final String_valueContext string_value() throws RecognitionException {
		String_valueContext _localctx = new String_valueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_string_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Number_valueContext number_value() {
			return getRuleContext(Number_valueContext.class,0);
		}
		public String_valueContext string_value() {
			return getRuleContext(String_valueContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value);
		try {
			setState(42);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case DECIMAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				number_value();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				string_value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Number_comparison_operatorContext extends ParserRuleContext {
		public TerminalNode GT() { return getToken(GlobalSQLParser.GT, 0); }
		public TerminalNode GE() { return getToken(GlobalSQLParser.GE, 0); }
		public TerminalNode LT() { return getToken(GlobalSQLParser.LT, 0); }
		public TerminalNode LE() { return getToken(GlobalSQLParser.LE, 0); }
		public TerminalNode EQ() { return getToken(GlobalSQLParser.EQ, 0); }
		public TerminalNode NE() { return getToken(GlobalSQLParser.NE, 0); }
		public Number_comparison_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_comparison_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterNumber_comparison_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitNumber_comparison_operator(this);
		}
	}

	public final Number_comparison_operatorContext number_comparison_operator() throws RecognitionException {
		Number_comparison_operatorContext _localctx = new Number_comparison_operatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_number_comparison_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GE) | (1L << LT) | (1L << LE) | (1L << EQ) | (1L << NE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_comparison_operatorContext extends ParserRuleContext {
		public TerminalNode NE() { return getToken(GlobalSQLParser.NE, 0); }
		public TerminalNode EQ() { return getToken(GlobalSQLParser.EQ, 0); }
		public String_comparison_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_comparison_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterString_comparison_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitString_comparison_operator(this);
		}
	}

	public final String_comparison_operatorContext string_comparison_operator() throws RecognitionException {
		String_comparison_operatorContext _localctx = new String_comparison_operatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string_comparison_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if ( !(_la==EQ || _la==NE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public TerminalNode COLID() { return getToken(GlobalSQLParser.COLID, 0); }
		public Number_comparison_operatorContext number_comparison_operator() {
			return getRuleContext(Number_comparison_operatorContext.class,0);
		}
		public Number_valueContext number_value() {
			return getRuleContext(Number_valueContext.class,0);
		}
		public String_comparison_operatorContext string_comparison_operator() {
			return getRuleContext(String_comparison_operatorContext.class,0);
		}
		public String_valueContext string_value() {
			return getRuleContext(String_valueContext.class,0);
		}
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitComparison(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(COLID);
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(49);
				number_comparison_operator();
				setState(50);
				number_value();
				}
				break;
			case 2:
				{
				setState(52);
				string_comparison_operator();
				setState(53);
				string_value();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_operatorContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(GlobalSQLParser.AND, 0); }
		public TerminalNode OR() { return getToken(GlobalSQLParser.OR, 0); }
		public Logical_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterLogical_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitLogical_operator(this);
		}
	}

	public final Logical_operatorContext logical_operator() throws RecognitionException {
		Logical_operatorContext _localctx = new Logical_operatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logical_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_clauseContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(GlobalSQLParser.SELECT, 0); }
		public List<TerminalNode> COLID() { return getTokens(GlobalSQLParser.COLID); }
		public TerminalNode COLID(int i) {
			return getToken(GlobalSQLParser.COLID, i);
		}
		public List<TerminalNode> COLO() { return getTokens(GlobalSQLParser.COLO); }
		public TerminalNode COLO(int i) {
			return getToken(GlobalSQLParser.COLO, i);
		}
		public TerminalNode ALLCOLS() { return getToken(GlobalSQLParser.ALLCOLS, 0); }
		public Select_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterSelect_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitSelect_clause(this);
		}
	}

	public final Select_clauseContext select_clause() throws RecognitionException {
		Select_clauseContext _localctx = new Select_clauseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_select_clause);
		int _la;
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(SELECT);
				setState(60);
				match(COLID);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COLO) {
					{
					{
					setState(61);
					match(COLO);
					setState(62);
					match(COLID);
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				match(SELECT);
				setState(69);
				match(ALLCOLS);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Delete_clauseContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(GlobalSQLParser.DELETE, 0); }
		public TerminalNode TBLID() { return getToken(GlobalSQLParser.TBLID, 0); }
		public Delete_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterDelete_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitDelete_clause(this);
		}
	}

	public final Delete_clauseContext delete_clause() throws RecognitionException {
		Delete_clauseContext _localctx = new Delete_clauseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_delete_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(DELETE);
			setState(73);
			match(TBLID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Update_clauseContext extends ParserRuleContext {
		public TerminalNode UPDATE() { return getToken(GlobalSQLParser.UPDATE, 0); }
		public TerminalNode TBLID() { return getToken(GlobalSQLParser.TBLID, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(GlobalSQLParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(GlobalSQLParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(GlobalSQLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(GlobalSQLParser.RPAREN, i);
		}
		public TerminalNode VALUES() { return getToken(GlobalSQLParser.VALUES, 0); }
		public List<TerminalNode> COLID() { return getTokens(GlobalSQLParser.COLID); }
		public TerminalNode COLID(int i) {
			return getToken(GlobalSQLParser.COLID, i);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COLO() { return getTokens(GlobalSQLParser.COLO); }
		public TerminalNode COLO(int i) {
			return getToken(GlobalSQLParser.COLO, i);
		}
		public Update_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_update_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterUpdate_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitUpdate_clause(this);
		}
	}

	public final Update_clauseContext update_clause() throws RecognitionException {
		Update_clauseContext _localctx = new Update_clauseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_update_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(UPDATE);
			setState(76);
			match(TBLID);
			setState(77);
			match(LPAREN);
			{
			setState(78);
			match(COLID);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLO) {
				{
				{
				setState(79);
				match(COLO);
				setState(80);
				match(COLID);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(86);
			match(RPAREN);
			setState(87);
			match(VALUES);
			setState(88);
			match(LPAREN);
			{
			setState(89);
			value();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLO) {
				{
				{
				setState(90);
				match(COLO);
				setState(91);
				value();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(97);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggregate_clauseContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(GlobalSQLParser.LPAREN, 0); }
		public TerminalNode COLID() { return getToken(GlobalSQLParser.COLID, 0); }
		public TerminalNode RPAREN() { return getToken(GlobalSQLParser.RPAREN, 0); }
		public TerminalNode SUM() { return getToken(GlobalSQLParser.SUM, 0); }
		public TerminalNode AVG() { return getToken(GlobalSQLParser.AVG, 0); }
		public TerminalNode MIN() { return getToken(GlobalSQLParser.MIN, 0); }
		public TerminalNode MAX() { return getToken(GlobalSQLParser.MAX, 0); }
		public TerminalNode COUNT() { return getToken(GlobalSQLParser.COUNT, 0); }
		public Aggregate_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregate_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterAggregate_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitAggregate_clause(this);
		}
	}

	public final Aggregate_clauseContext aggregate_clause() throws RecognitionException {
		Aggregate_clauseContext _localctx = new Aggregate_clauseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_aggregate_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUM) | (1L << COUNT) | (1L << AVG) | (1L << MIN) | (1L << MAX))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(100);
			match(LPAREN);
			setState(101);
			match(COLID);
			setState(102);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class From_clauseContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(GlobalSQLParser.FROM, 0); }
		public List<TerminalNode> TBLID() { return getTokens(GlobalSQLParser.TBLID); }
		public TerminalNode TBLID(int i) {
			return getToken(GlobalSQLParser.TBLID, i);
		}
		public List<TerminalNode> COLO() { return getTokens(GlobalSQLParser.COLO); }
		public TerminalNode COLO(int i) {
			return getToken(GlobalSQLParser.COLO, i);
		}
		public From_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterFrom_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitFrom_clause(this);
		}
	}

	public final From_clauseContext from_clause() throws RecognitionException {
		From_clauseContext _localctx = new From_clauseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_from_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(FROM);
			setState(105);
			match(TBLID);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLO) {
				{
				{
				setState(106);
				match(COLO);
				setState(107);
				match(TBLID);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Join_clauseContext extends ParserRuleContext {
		public TerminalNode JOIN() { return getToken(GlobalSQLParser.JOIN, 0); }
		public TerminalNode LPAREN() { return getToken(GlobalSQLParser.LPAREN, 0); }
		public List<TerminalNode> COLID() { return getTokens(GlobalSQLParser.COLID); }
		public TerminalNode COLID(int i) {
			return getToken(GlobalSQLParser.COLID, i);
		}
		public TerminalNode COLO() { return getToken(GlobalSQLParser.COLO, 0); }
		public TerminalNode RPAREN() { return getToken(GlobalSQLParser.RPAREN, 0); }
		public Join_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_join_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterJoin_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitJoin_clause(this);
		}
	}

	public final Join_clauseContext join_clause() throws RecognitionException {
		Join_clauseContext _localctx = new Join_clauseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_join_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(JOIN);
			setState(114);
			match(LPAREN);
			setState(115);
			match(COLID);
			setState(116);
			match(COLO);
			setState(117);
			match(COLID);
			setState(118);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Where_clauseContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(GlobalSQLParser.WHERE, 0); }
		public List<ComparisonContext> comparison() {
			return getRuleContexts(ComparisonContext.class);
		}
		public ComparisonContext comparison(int i) {
			return getRuleContext(ComparisonContext.class,i);
		}
		public List<Logical_operatorContext> logical_operator() {
			return getRuleContexts(Logical_operatorContext.class);
		}
		public Logical_operatorContext logical_operator(int i) {
			return getRuleContext(Logical_operatorContext.class,i);
		}
		public Where_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).enterWhere_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlobalSQLListener ) ((GlobalSQLListener)listener).exitWhere_clause(this);
		}
	}

	public final Where_clauseContext where_clause() throws RecognitionException {
		Where_clauseContext _localctx = new Where_clauseContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_where_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(WHERE);
			setState(121);
			comparison();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(122);
				logical_operator();
				setState(123);
				comparison();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
